# strava-auth

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  mypy.ini  requirements.txt  ruff.toml  setup.cfg  setup.py  upload_test_pypi.sh
.github/workflows/: test.yaml
strava_auth/: auth.py  cache.py  logger.py  login.py  main.py  types.py
test/: test_auth.py  test_login.py
