[metadata]
name = strava_auth
version = 0.1.0
description = Streamline the Strava OAuth2 flow with Selenium, allowing developers to quickly and easily integrate Strava API into their applications
url = https://github.com/atefkbenothman/strava-auth
author = Atef Kai Benothman
license = MIT
license_file = LICENSE

[options]
packages = strava_auth